--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/async-retry": "^1.4.1",
     "@types/expect-puppeteer": "^4.4.0",
     "@types/fs-extra": "^8.0.1",
+    "@types/is-ci": "^2.0.0",
     "@types/jest": "24.9.1",
     "@types/jest-environment-puppeteer": "^4.3.1",
     "@types/lodash": "^4.14.147",
@@ -107,6 +108,7 @@
     "glob": "^7.1.3",
     "globby": "^9.0.0",
     "husky": "^4.2.1",
+    "is-ci": "^2.0.0",
     "jest": "^24.1.0",
     "jest-environment-puppeteer": "^3.4.0",
     "jest-puppeteer": "^4.0.0",
