--- a/packages/yoshi-helpers/package.json
+++ b/packages/yoshi-helpers/package.json
@@ -9,6 +9,7 @@
   "author": "Ronen Amiel & Ran Yitzhaki",
   "license": "ISC",
   "dependencies": {
+    "is-ci":"^2.0.0",
     "arg": "4.1.3",
     "chalk": "2.4.2",
     "chokidar": "2.1.8",
@@ -33,6 +34,7 @@
     "@types/server-destroy": "1.0.0",
     "@types/webpack": "4.41.11",
     "@types/xmldoc": "1.1.4",
+    "@types/is-ci":"^2.0.0",
     "type-fest": "0.13.1",
     "typescript": "3.7.5"
   }
